--- a/src/Translations/es/global.json
+++ b/src/Translations/es/global.json
@@ -40,7 +40,7 @@
         "2q": "¿Qué significa 'Mintear' un NFT?",
         "2a": "Minting se refiere al proceso de tokenizar un archivo digital, o una obra de arte digital, y publicarlo en la cadena de bloques. Una vez que se mintea un NFT, puede verificar la propiedad y comprar, vender e intercambiar el NFT.",
         "3q": "¿Cuánto cuesta el NFT?",
-        "3a": "El costo del NFT del maradona fan fest es de 50us o xMatic, tene en cuenta deberás afrontar tambien los gas fees de la red.",
+        "3a": "El costo del NFT del maradona fan fest es de 50 USD o su equivalente en Matic, tene en cuenta deberás afrontar tambien los gas fees de la red.",
         "4q": "¿Cómo configuro una wallet?",
         "4a": "Consulte este artículo para aprender a configurar su billetera sin custodia: Guía de configuración de billetera",
         "5q": "¿Cuántos NFT puedo comprar?",
@@ -48,7 +48,7 @@
         "6q": "¿Qué sucede si pierdo el acceso a mi billetera?",
         "6a": "La mejor manera de evitar la pérdida de una billetera o una dirección de billetera es hacer numerosas copias físicas de su frase semilla ('Frase de recuperación secreta') y almacenar estas copias en lugares que conozca y en los que confíe. Desafortunadamente, no se puede hacer mucho si ha perdido todas las copias de la frase inicial de su billetera, así que asegúrese de mantenerla segura. Nunca comparta su frase inicial de billetera con nadie.",
         "7q": "¿Dónde puedo ver mi NFT?",
-        "7a": "Una vez que se haya reclamado (o 'minteado') el NFT, podrá ver su NFT en el sitio web de Cheetos Chester Drop, en OpenSea o en otros mercados de NFT basados ​​en la red de Polygon. Simplemente puede conectar su billetera digital al mercado, que 'lo registra', y luego buscar los NFT en su billetera a través de la interfaz del mercado.",
+        "7a": "Una vez que se haya reclamado (o 'minteado') el NFT, podrá ver su NFT en el sitio web de Maradona FanFest, en OpenSea o en otros mercados de NFT basados ​​en la red de Polygon. Simplemente puede conectar su billetera digital al mercado, que 'lo registra', y luego buscar los NFT en su billetera a través de la interfaz del mercado.",
         "8q": "¿Puedo ver o cambiar mi NFT?",
         "8a": "Si el coleccionable puede ser vendido o intercambiado a traves del mercado secundario, en el marketplace que le resulte más conveniente. Como consejo recomendamos publicarlos en OpenSea que es la plataforma con mayor volumen de ventas en la industria NFT."
 
