--- a/src/Translations/en/global.json
+++ b/src/Translations/en/global.json
@@ -40,7 +40,7 @@
         "2q": "¿What does it mean to 'mint' an NFT?",
         "2a": "Minting refers to the process of tokenizing a digital file, or digital work of art, and publishing it on the blockchain. Once an NFT is minted, you can verify ownership and buy, sell, and trade the NFT.",
         "3q": "How much does this NFT cost?",
-        "3a": "The cost of the NFT of Maradona FanFest is 50 USD or the equivalent in Matic, keep in mind that you will also have to face the gas fees of the network.",
+        "3a": "The cost of the NFT of Maradona FanFest is 50 USD or the equivalent in MATIC, keep in mind that you will also have to face the gas fees of the network.",
         "4q": "How do I set up a wallet?",
         "4a": "Check out this article to learn how to set up your non-custodial wallet: Wallet Setup Guide",
         "5q": "How many NFTs can I buy?",
