--- a/src/Translations/es/global.json
+++ b/src/Translations/es/global.json
@@ -40,7 +40,7 @@
         "2q": "¿Qué significa 'Mintear' un NFT?",
         "2a": "Minting se refiere al proceso de tokenizar un archivo digital, o una obra de arte digital, y publicarlo en la cadena de bloques. Una vez que se mintea un NFT, puede verificar la propiedad y comprar, vender e intercambiar el NFT.",
         "3q": "¿Cuánto cuesta el NFT?",
-        "3a": "El costo del NFT del maradona fan fest es de 50 USD o su equivalente en Matic, tene en cuenta deberás afrontar tambien los gas fees de la red.",
+        "3a": "El costo del NFT del maradona fan fest es de 50 USD o su equivalente en MATIC, tene en cuenta deberás afrontar tambien los gas fees de la red.",
         "4q": "¿Cómo configuro una wallet?",
         "4a": "Consulte este artículo para aprender a configurar su billetera sin custodia: Guía de configuración de billetera",
         "5q": "¿Cuántos NFT puedo comprar?",
